--- a/WindowsApp2/bin/Form3.resx
+++ b/WindowsApp2/bin/Form3.resx
@@ -117,6 +117,18 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="TextBox1.Text" xml:space="preserve">
+    <value>AutoPOSLite.
+
+Escrito por Pablo Fierro Vallejos.
+Agosto 2022.
+
+Permite realizar ventas mediante pantalla touch y generando registro de ventas.
+Permite enviar la venta a POS Transbank para realizar el pago mediante tarjeta.
+
+
+Heladería Serrano Laja.</value>
+  </data>
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
   <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
