--- a/WindowsApp2/bin/frmMenu.resx
+++ b/WindowsApp2/bin/frmMenu.resx
@@ -121,7 +121,7 @@
   <data name="PictureBox1.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAAY4AAAF7CAYAAADFW2zWAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
-        wwAADsMBx2+oZAAA/7JJREFUeF7sXQdgVFXWZsu/fYVAEgKIqNiB9ISOIAoWanqlCUiTJtKkiV1UVASl
+        vAAADrwBlbxySQAA/7JJREFUeF7sXQdgVFXWZsu/fYVAEgKIqNiB9ISOIAoWanqlCUiTJtKkiV1UVASl
         N+m9J/QO6YT0QnrvdfrM959z3wykjBBYXV18Rw8zmXnvvjIz57vfabcZZJFFFllkkeU+RAYOWWSRRRZZ
         7ktk4JBFFllkkeW+RAYOWWSRRRZZ7ktk4JBFFllkkeW+RAYOWWSRRRZZ7ktk4JBFFllkkeW+RAYOWWSR
         RRZZ7ktk4JBFFllkkeW+RAYOWWSRRRZZ7ktk4JBFFllkkeW+RAYOWWSRRRZZ7ktk4JBFFllkkeW+RAYO
@@ -2368,7 +2368,7 @@
   <data name="PictureBox1.InitialImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAAY4AAAF7CAYAAADFW2zWAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
-        wwAADsMBx2+oZAAA/7JJREFUeF7sXQdgVFXWZsu/fYVAEgKIqNiB9ISOIAoWanqlCUiTJtKkiV1UVASl
+        vAAADrwBlbxySQAA/7JJREFUeF7sXQdgVFXWZsu/fYVAEgKIqNiB9ISOIAoWanqlCUiTJtKkiV1UVASl
         N+m9J/QO6YT0QnrvdfrM959z3wykjBBYXV18Rw8zmXnvvjIz57vfabcZZJFFFllkkeU+RAYOWWSRRRZZ
         7ktk4JBFFllkkeW+RAYOWWSRRRZZ7ktk4JBFFllkkeW+RAYOWWSRRRZZ7ktk4JBFFllkkeW+RAYOWWSR
         RRZZ7ktk4JBFFllkkeW+RAYOWWSRRRZZ7ktk4JBFFllkkeW+RAYOWWSRRRZZ7ktk4JBFFllkkeW+RAYO
@@ -4618,8 +4618,20 @@
   <metadata name="MenuStrip1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>212, 17</value>
   </metadata>
+  <metadata name="Timer1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>327, 17</value>
+  </metadata>
+  <metadata name="SerialPort1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>416, 17</value>
+  </metadata>
+  <metadata name="Timer2.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>526, 17</value>
+  </metadata>
+  <metadata name="SerialPort2.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>615, 17</value>
+  </metadata>
   <metadata name="$this.TrayHeight" type="System.Int32, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-    <value>25</value>
+    <value>57</value>
   </metadata>
   <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
